[gd_scene load_steps=5 format=3 uid="uid://c0pl7bfg6a2xn"]

[ext_resource type="Theme" uid="uid://de61k6i5aq6u6" path="res://assets/themes/ui_theme.tres" id="1_3k7ai"]
[ext_resource type="Script" uid="uid://c0tvj2r1yyfqe" path="res://ui/controls_settings/controls_settings.gd" id="2_q3yhi"]
[ext_resource type="Texture2D" uid="uid://cj6b5cx2b65fl" path="res://assets/images/sky_bg.jpg" id="3_lmopa"]
[ext_resource type="Script" uid="uid://jywldawjjc6b" path="res://ui/button.gd" id="4_exa8x"]

[node name="ControlsSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3k7ai")
script = ExtResource("2_q3yhi")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -24.0
offset_top = -540.0
offset_right = 1976.0
offset_bottom = 1460.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("3_lmopa")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 144.0
grow_vertical = 0
text = "BACK"
script = ExtResource("4_exa8x")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -268.0
offset_right = 296.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ActionList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DefaultButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Default"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/DefaultButton" to="." method="_on_default_button_pressed"]
